# SOMA_CHESS_O1

./: .gitignore  CLAUDE.md  README.md  README_zh.md  开发进度与待办事项.md
config/calibration/: README.md  camera_intrinsics.yaml  eye_to_hand.yaml  workspace.yaml
docs/: DEVELOPMENT.md  WSL_Xbox手柄直通.md  机械臂技术文档.md
docs/reference/: FAQ-硬件与仿真.md  locked-decisions.md  机械臂技术文档.md
docs/setup/: DEVELOPMENT.md  WSL_Xbox手柄直通.md  Windows_TCP相机桥接.md
docs/testing/: V1.01_测试记录模板.md  V1.01_验收清单.md
scripts/: attach_devices.bat  build_wsl_gamepad_kernel.sh  check_wsl_gamepad_support.sh  ensure_wsl_devnodes.sh  log_gamepad_state.py  probe_gamepad_linux.py  start_teleop_wsl_gamepad.sh  wslconfig.gamepad.template
scripts/bridge方案/: adaptive_camera.py  attach_devices_bridge_mode.bat  bridge_gui.py  bridge_worker.py  camera_bridge_receiver.py  camera_controls.py  gamepad_bridge.py  start_bridge.bat  start_camera_bridge.bat  start_camera_bridge_adaptive_540p.bat  start_camera_bridge_locked_540p.bat  start_camera_bridge_tuning_540p.bat  start_camera_ros_publisher.bat  windows_camera_bridge.py
scripts/calibration/: README.md  calibrate_camera_charuco.py  solve_workspace_calibration.py  validate_workspace_reachability.py
src/arm_perception/: package.xml  setup.cfg  setup.py
src/arm_perception/arm_perception/: __init__.py  calibration_artifacts.py
src/arm_perception/arm_perception/nodes/: __init__.py  find_object_service_node.py
src/arm_perception/config/: perception_defaults.yaml
src/arm_perception/launch/: perception.launch.py
src/arm_perception/resource/: arm_perception
(+18 files in other folders)
