<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_perception</name>
  <version>0.1.0</version>
  <description>Calibration-aware perception and world-grounding scaffolding for SOMA Arm.</description>
  <maintainer email="contact@jeffliulab.com">Jeff Liu Lab</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>arm_interfaces</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
